# PasteBridge

./: .gitattributes  .gitignore  .gitmodules  1.txt  BUILD_GUIDE.md  CODE_WIKI.md  Cargo.toml  README.md  build.rs  changepassword.php  copyroomlogin.php  database-login.php  database-password.php  debug.bat  deleteclipboarddata.php  getclipboarddata.php  guide.txt  index.css  index.html  index.php  install_llvm.bat  msvc_stubs.cpp  old_app.slint  password.php  purecopy.sql  sendclipboarddata.php  结构建议.txt
.cargo/: config.toml
.refact/buddy/: memory_ops.jsonl  runtime_queue.jsonl  state.json
.trae/rules/: allow-all-commands.yaml
.trae/rules/.refact/buddy/: runtime_queue.jsonl  settings.json  state.json
crates/core/: Cargo.toml
crates/core/src/: clipboard.rs  database.rs  device.rs  lib.rs  memory.rs  models.rs  state.rs
crates/core/src/api/: mod.rs  routes.rs  server.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs  tooltip.rs  tray.rs
crates/desktop/src/platform/: mod.rs  traits.rs
crates/desktop/src/ui/: mod.rs
crates/desktop/ui/: .favicon.png-autosave.kra  app.slint  appb2.slint  themes.slint
js/: console.welcome.js  cursor-tracker.js  index.js  search-engine-selector.js
materialize/css/: materialize.min.css
public/: index.php
public/assets/css/: index.css  index.less
public/assets/materialize/css/: materialize.css  (+1 more)
src/: clipboard.rs  lib.rs  main.rs  tooltip.rs  tray.rs  window_effects.rs
src/api/: mod.rs  routes.rs  server.rs
src/core/: clipboard.rs  database.rs  device.rs  hotkey.rs  memory.rs  mod.rs  state.rs  tray.rs  window.rs
src/platform/: mod.rs  traits.rs
src/platform/windows/: clipboard.rs  hotkey.rs  mod.rs  tray.rs  window.rs
src/ui/: callbacks.rs  mod.rs
ui/: app.slint  app_bak.slint  appb2.slint
vcpkg-skia-imports/: skia.lib  skparagraph.lib  skshaper.lib  skunicode_core.lib  skunicode_icu.lib
web/: LICENSE  changepassword.php  copyroomlogin.php  database-login.php  database-password.php  deleteclipboarddata.php  getclipboarddata.php  index.css  index.html  index.js  index.php  init_db.php  password.php  purecopy.sql  sendclipboarddata.php
web/data/: purecopy.db
web/js/: console.welcome.js  cursor-tracker.js  index.js  search-engine-selector.js
(+6 files in other folders)
